src/test/ui/consts/control-flow/loop.stock.stderr
error[E0658]: `loop` is not allowed in a `const`
  --> $DIR/loop.rs:8:15
   |
LL | const _: () = loop {};
   |               ^^^^^^^
   |
   = note: see issue #52000 <https://github.com/rust-lang/rust/issues/52000> for more information
   = help: add `#![feature(const_loop)]` to the crate attributes to enable

error[E0658]: `loop` is not allowed in a `static`
  --> $DIR/loop.rs:10:19
   |
LL | static FOO: i32 = loop { break 4; };
   |                   ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #52000 <https://github.com/rust-lang/rust/issues/52000> for more information
   = help: add `#![feature(const_loop)]` to the crate attributes to enable

error[E0658]: `loop` is not allowed in a `const fn`
  --> $DIR/loop.rs:13:5
   |
LL |     loop {}
   |     ^^^^^^^
   |
   = note: see issue #52000 <https://github.com/rust-lang/rust/issues/52000> for more information
   = help: add `#![feature(const_loop)]` to the crate attributes to enable

error[E0658]: `loop` is not allowed in a `const fn`
  --> $DIR/loop.rs:26:9
   |
LL |         loop {}
   |         ^^^^^^^
   |
   = note: see issue #52000 <https://github.com/rust-lang/rust/issues/52000> for more information
   = help: add `#![feature(const_loop)]` to the crate attributes to enable

error[E0658]: `while` is not allowed in a `const`
  --> $DIR/loop.rs:38:9
   |
LL |         while false {}
   |         ^^^^^^^^^^^^^^
   |
   = note: see issue #52000 <https://github.com/rust-lang/rust/issues/52000> for more information
   = help: add `#![feature(const_loop)]` to the crate attributes to enable

error[E0658]: `while` is not allowed in a `const`
  --> $DIR/loop.rs:47:5
   |
LL | /     while x < 4 {
LL | |         x += 1;
LL | |     }
   | |_____^
   |
   = note: see issue #52000 <https://github.com/rust-lang/rust/issues/52000> for more information
   = help: add `#![feature(const_loop)]` to the crate attributes to enable

error[E0658]: `while` is not allowed in a `const`
  --> $DIR/loop.rs:51:5
   |
LL | /     while x < 8 {
LL | |         x += 1;
LL | |     }
   | |_____^
   |
   = note: see issue #52000 <https://github.com/rust-lang/rust/issues/52000> for more information
   = help: add `#![feature(const_loop)]` to the crate attributes to enable

error[E0744]: `for` is not allowed in a `const`
  --> $DIR/loop.rs:61:5
   |
LL | /     for i in 0..4 {
LL | |         x += i;
LL | |     }
   | |_____^

error[E0744]: `for` is not allowed in a `const`
  --> $DIR/loop.rs:65:5
   |
LL | /     for i in 0..4 {
LL | |         x += i;
LL | |     }
   | |_____^

error[E0658]: `loop` is not allowed in a `const`
  --> $DIR/loop.rs:75:5
   |
LL | /     loop {
LL | |         x += 1;
LL | |         if x == 4 {
LL | |             break;
LL | |         }
LL | |     }
   | |_____^
   |
   = note: see issue #52000 <https://github.com/rust-lang/rust/issues/52000> for more information
   = help: add `#![feature(const_loop)]` to the crate attributes to enable

error[E0658]: `loop` is not allowed in a `const`
  --> $DIR/loop.rs:82:5
   |
LL | /     loop {
LL | |         x += 1;
LL | |         if x == 8 {
LL | |             break;
LL | |         }
LL | |     }
   | |_____^
   |
   = note: see issue #52000 <https://github.com/rust-lang/rust/issues/52000> for more information
   = help: add `#![feature(const_loop)]` to the crate attributes to enable

error[E0658]: `while` is not allowed in a `const`
  --> $DIR/loop.rs:94:5
   |
LL |     while let None = Some(x) { }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #52000 <https://github.com/rust-lang/rust/issues/52000> for more information
   = help: add `#![feature(const_loop)]` to the crate attributes to enable

error[E0658]: `while` is not allowed in a `const`
  --> $DIR/loop.rs:95:5
   |
LL |     while let None = Some(x) { }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #52000 <https://github.com/rust-lang/rust/issues/52000> for more information
   = help: add `#![feature(const_loop)]` to the crate attributes to enable

error[E0658]: `loop` is not allowed in a `const`
  --> $DIR/loop.rs:17:22
   |
LL |     const BAR: i32 = loop { break 4; };
   |                      ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #52000 <https://github.com/rust-lang/rust/issues/52000> for more information
   = help: add `#![feature(const_loop)]` to the crate attributes to enable

error[E0658]: `loop` is not allowed in a `const`
  --> $DIR/loop.rs:21:22
   |
LL |     const BAR: i32 = loop { break 4; };
   |                      ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #52000 <https://github.com/rust-lang/rust/issues/52000> for more information
   = help: add `#![feature(const_loop)]` to the crate attributes to enable

error: aborting due to 15 previous errors

Some errors have detailed explanations: E0658, E0744.
For more information about an error, try `rustc --explain E0658`.
